<resources>
    <string name="app_name">thunderTank</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ph_level_text">PH Level</string>
    <string name="temperature_text">Temperature</string>
    <string name="clarity_text">Clarity</string>

    <string name="pH_format">%.1f pH</string>
    <string name="temp_format">%.1f \u2109</string>
    <string name="clarity_format">%s</string>
    <string name="clarity_format_num">%.1f NTU</string>

    <string name="welcome_text">Welcome</string>
    <string name="ChooseFish">Choose a fish!</string>
    <string name="ChooseFishManually">Or manually setup your fish!</string>
    <string name="BettaPresetText">Betta Fish</string>
    <string name="GoldFishPresetText">Gold Fish</string>
    <string name="AngelFishPresetText">Angel Fish</string>
    <string name="GuppiesPresetText">Guppies</string>
    <string name="MolliesPresetText">Mollies</string>
    <string name="NeonTetraPresetText">Neon Treta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manual_setup_button_text">Manual Setup</string>
    <string name="how_many_fishes_text">&#160;&#160;How many Fishes?</string>
    <string name="confirm_text">Confirm</string>
    <string name="configurations_text">Configurations</string>
    <string name="enter_amount_text">Enter Amount</string>

    <string name="pH_ranges_format">%.1f - %.1f pH</string>
    <string name="temp_ranges_format">%.1f - %.1f \u2109</string>
    <string name="clarity_ranges_format">%.1f - %.1f NTU</string>
    <string name="num_fishes_format">%d Fishes</string>
    <string name="feeding_rate_format">%d rotations/Day</string>
    <string name="reset_everything">Reset Everything</string>
    <string name="settings_name">Settings</string>
    <string name="add_fish_text">Add Fish</string>
    <string name="home_text">Home</string>
    <string name="turbidity_high">Turbidity High:</string>
    <string name="turbidity_low">Turbidity Low:</string>
    <string name="zero">0</string>
    <string name="temp_high_text">Temp High:</string>
    <string name="temp_low_text">Temp Low:</string>
    <string name="ph_low_text">pH Low:</string>
    <string name="ph_high_text">pH High:</string>
    <string name="fishtankname">FishTankName</string>
    <string name="change_tank_name">Change Tank Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="new_name">New Name</string>
    <string name="enter">Enter</string>
    <string name="temperature_level_text">Temperature Level</string>


</resources>