<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.thundertank.setup.SharedSetupViewModel" />
    </data>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        tools:context=".setup.SetupScreen1Fragment">

        <TextView
            android:id="@+id/chooseFishText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/ChooseFish"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chooseFishText"
            android:fillViewport="true"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp">

                <Button
                    android:id="@+id/button3"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AngelFishPresetText"
                    android:onClick="@{() -> viewModel.eventFishAngel()}"/>

                <Button
                    android:id="@+id/button4"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BettaPresetText"
                    android:onClick="@{() -> viewModel.eventFishBetta()}"/>

                <Button
                    android:id="@+id/button5"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GoldFishPresetText"
                    android:onClick="@{() -> viewModel.eventFishGold()}"/>

                <Button
                    android:id="@+id/button6"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/GuppiesPresetText"
                    android:onClick="@{() -> viewModel.eventFishGuppies()}"/>

                <Button
                    android:id="@+id/button7"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MolliesPresetText"
                    android:onClick="@{() -> viewModel.eventFishMollies()}"/>

                <Button
                    android:id="@+id/button8"
                    style="@style/fishButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NeonTetraPresetText"
                    android:onClick="@{() -> viewModel.eventFishNeon()}"/>
                <TextView
                    android:id="@+id/manualText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ChooseFishManually"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/manualButton"
                    style="@style/fishButton"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_setup_button_text" />
            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</layout>