<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">

    <TextView
        android:id="@+id/textView"
        style="@style/settingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_name"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_name"
        app:layout_constraintEnd_toStartOf="@+id/new_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_name"
        style="@style/settingsButton"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/enter_button"
        style="@style/settingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>