<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.thundertank.home.HomeScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        tools:context=".home.HomeScreenFragment">

        <TextView
            android:id="@+id/tempText"
            style="@style/mainBox"
            android:layout_width="@dimen/box_width"
            android:layout_height="wrap_content"
            android:text="@string/temperature_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/tempNum"
            app:layout_constraintStart_toStartOf="@+id/clarityText" />

        <TextView
            android:id="@+id/clarityText"
            style="@style/mainBox"
            android:layout_width="@dimen/box_width"
            android:layout_height="wrap_content"
            android:text="@string/clarity_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/clarityNum"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <TextView
            android:id="@+id/tankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="FishTankName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#060C35"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phNum"
            style="@style/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/pH_format(homeViewModel.pH)}"
            app:layout_constraintBottom_toBottomOf="@+id/phProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/phProgressBar"
            app:layout_constraintStart_toStartOf="@+id/phProgressBar"
            app:layout_constraintTop_toTopOf="@+id/phProgressBar"
            tools:text="60%" />

        <TextView
            android:id="@+id/tempNum"
            style="@style/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/temp_format(homeViewModel.temp)}"
            app:layout_constraintBottom_toBottomOf="@+id/tempProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/tempProgressBar"
            app:layout_constraintStart_toStartOf="@+id/tempProgressBar"
            app:layout_constraintTop_toTopOf="@+id/tempProgressBar"
            tools:text="60" />

        <TextView
            android:id="@+id/clarityNum"
            style="@style/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/clarity_format(homeViewModel.clarity)}"
            app:layout_constraintBottom_toBottomOf="@+id/clarityProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/clarityProgressBar"
            app:layout_constraintStart_toStartOf="@+id/clarityProgressBar"
            app:layout_constraintTop_toTopOf="@+id/clarityProgressBar"
            tools:text="60" />


        <TextView
            android:id="@+id/phText"
            style="@style/mainBox"
            android:layout_width="@dimen/box_width"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:text="@string/ph_level_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/phNum"
            app:layout_constraintStart_toStartOf="@+id/tempText" />

        <ProgressBar
            android:id="@+id/phProgressBar"
            style="@style/progressCircles"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:max="140"
            android:progressDrawable="@drawable/ph_drawable_circle"
            app:layout_constraintBottom_toTopOf="@+id/tempProgressBar"
            app:layout_constraintStart_toStartOf="@+id/tempProgressBar"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="40" />

        <ProgressBar
            android:id="@+id/tempProgressBar"
            style="@style/progressCircles"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:max="1000"
            android:progressDrawable="@drawable/temp_drawable_circle"
            app:layout_constraintBottom_toTopOf="@+id/clarityProgressBar"
            app:layout_constraintStart_toStartOf="@+id/clarityProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/phProgressBar"
            tools:progress="60" />

        <ProgressBar
            android:id="@+id/clarityProgressBar"
            style="@style/progressCircles"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:max="50"
            android:progressDrawable="@drawable/clarity_drawable_circle"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tempProgressBar"
            tools:progress="10" />

        <TextView
            android:id="@+id/textView2"
            style="@style/progressText"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="1 feeds/hr"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            style="@style/mainBox"
            android:layout_width="@dimen/box_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="Feeding Rate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>